fix buttons on small screens

--- a/styles.css
+++ b/styles.css
@@ -309,7 +309,7 @@ main{
 }
 [horz] {
 	flex-wrap: wrap;
-	justify-content: space-between;
+	justify-content: space-around;
 }
 [vert] {
 	flex-direction: column;
